Add ability to pass public key to update, deactivate DIDs and resource creation
